test/splitArrayConst2.slq
def main() {
	a := vector(2, 1:B);
	a[0]:=H(a[0]);
	if a[1]{a[1]:=X(a[1]);} // error
	return a;
}
